fixing pictures alignment

--- a/heavyconnect/static/css/styleSmall.css
+++ b/heavyconnect/static/css/styleSmall.css
@@ -162,8 +162,8 @@ input[type=button]{
 	background-size: 100% 100%;
     width: 70px;
     height: 70px;
-    margin-right: 5.5px;
-    margin-top: 5.5px;
+    margin-right: 10.5px;
+    margin-top: 13.5px;
 	float: right;
 	border: none;
 	border-radius: 7px;
